--- a/resources/syle.css
+++ b/resources/syle.css
@@ -7,8 +7,8 @@
 body {
   margin: 0;
 }
-
-/* DESKTOP NAV */
+ 
+/* Navigation */
 nav {
       /* background-image: linear-gradient(to bottom right, #30663B , #6DA81D); */
       height: 90px;
@@ -90,65 +90,6 @@ nav {
       color: #9b9b9b;
       font-size: 32px;
     }
-    
-  
-  /* MOBILE NAV */
-/*   
-  @media only screen and (min-width: 770px) {
-  
-    .mobile-nav .mobile-links {
-        display: none;
-    }
-  }
-   */
-  /*  NAV BAR FONT GRADUAL SMOOTH TRANSITION */ 
-  
-  /* @media only screen and (min-width: 770px) and (max-width: 796px) {
-    .navbar a {
-      font-size: 12px;
-    }
-  }
-  @media only screen and (min-width: 796px) and (max-width: 831px) {
-    .navbar a { 
-      font-size: 14px;
-    }
-  }
-  @media only screen and (min-width: 831px) and (max-width: 960px) {
-    .navbar a {
-      font-size: 16px;
-    }
-  }
-  
-  /* NAV MOBILE VERSION SETUP */ 
-  /*
-  @media only screen and (min-width: 200px) and (max-width: 770px) {
-    .navbar {
-        display: none;
-    }
-  
-    .mobile-nav {
-        display: flex;
-        flex-direction: column;
-        height: 10px;
-    }
-  
-    .mobile-links {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      margin-left: 15px;
-      margin-right: 15px;
-      margin-top: -45px;
-    }
-    
-    .mobile-links img {
-      height: 150%;
-      width: 150%;
-    }
-  } */
-
-
 
 
   /* Main Body Content */
@@ -438,6 +379,8 @@ nav {
     text-align: center;
   }
 
+
+  /* Sources */
   .sourcesContainer {
     position: float;
     margin: 60px 30px 35px 0;
