--- a/resources/cityLinks.css
+++ b/resources/cityLinks.css
@@ -100,6 +100,7 @@ nav {
     flex-direction: column;
     align-items: center; 
     justify-content: center;
+    position: relative;
   }
 
   .containerToCityLinks {
@@ -124,4 +125,23 @@ nav {
   .containerToCityLinks inline {
     text-decoration: underline dotted;
     color: red;
+  }
+
+  .formForSuggestions p {
+    margin-left: 650px;
+    position: absolute;
+    font-size: 20px;
+    color: #194A29;
+  }
+
+  .form {
+    position: float;
+    margin: 90px 30px 35px 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    position: relative;
   }
